Fix issues with settings page

--- a/app/assets/components/elements/json-request.html
+++ b/app/assets/components/elements/json-request.html
@@ -5,7 +5,7 @@
                    url="{{url}}"
                    auto="{{auto}}"
                    handle-as="json"
-                   contenttype="application/json"
+                   content-type="application/json"
                    method="{{method}}"
                    loading="{{loading}}"
                    last-response="{{result}}"
