Fix editor assignment

--- a/app/assets/components/ui-elements/oj-review-page-header.html
+++ b/app/assets/components/ui-elements/oj-review-page-header.html
@@ -180,7 +180,7 @@
           </div>
 
           <div id="assignments-row">
-              <oj-assigned-users-list paper="{{paper}} user="{{user}}"></oj-assigned-users-list>
+              <oj-assigned-users-list paper="{{paper}}" user="{{user}}"></oj-assigned-users-list>
           </div>
 
           <template is="dom-if" if="{{showBottomDetails(paper, paper.state, paper.can_view_annotations)}}">
